l7-routing-gke/echoserviceB.yaml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata:
  name: echoheadersb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoheadersb
    spec:
      containers:
      - name: echoheadersb
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: echoheadersb
  labels:
    app: echoheadersb
spec:
  type: NodePort
  ports:
  - port: 9001
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheadersb
